syntax = "proto3";

import "akkaserverless/annotations.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

package io.shopping.cart.api;

option java_outer_classname = "PurchasedProductApi";

service PurchasedProductService {
  option (akkaserverless.service) = {
    type: SERVICE_TYPE_ENTITY
    component: "io.shopping.cart.entity.PurchasedProduct"
  };

  rpc AddPurchasedProduct(PurchasedProduct) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/product/{customer_id}/{cart_id}/{product_id}/add"
      body: "*"
    };
  }
}

message PurchasedProduct {
  string customer_id = 1 [(akkaserverless.field).entity_key = true];
  string cart_id = 2 [(akkaserverless.field).entity_key = true];
  string product_id = 3 [(akkaserverless.field).entity_key = true];
  string product_name = 4;
  int32 quantity = 5;
  google.protobuf.Timestamp purchased_utc = 6;
}
